k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dsv
  labels:
    app.kubernetes.io/name: distributed-secrets-vault
