k8s/production/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsv-app-service
  namespace: dsv
spec:
  type: ClusterIP
  selector:
    app: dsv-app
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: dsv-app-headless
  namespace: dsv
spec:
  # Headless service for DNS lookups of all agent nodes
  type: ClusterIP
  clusterIP: None
  selector:
    app: dsv-app
  ports:
    - name: cluster
      port: 4801
      targetPort: 4801
    - name: http
      port: 9080
      targetPort: http
